--- a/user_interface/home.html
+++ b/user_interface/home.html
@@ -85,7 +85,7 @@
         </div>
       </nav>
 
-      <div class="jumbotron pt-6">
+      < class="jumbotron pt-6">
         <div class="col-md-4" style="padding-top: 250px">
           <p class="cl-banner">học tập để phát triển bản thân !</p>
           <h2 class="cl-banner">
@@ -100,8 +100,11 @@
             Học ngay
           </a>
         </div>
-      </div>
+      </>
     </div>
+
+
+
     <div class="bg-body">
       <div class="container-fluid">
         <div class="row">
