--- a/user_interface/header.html
+++ b/user_interface/header.html
@@ -78,7 +78,7 @@
                     Khoá học của tôi</a
                   >
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Đăng suất</a>
+                  <a class="dropdown-item" href="#">Đăng xuất</a>
                 </div>
               </li>
             </ul>
