--- a/user_interface/courseDetail.html
+++ b/user_interface/courseDetail.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -15,57 +16,234 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/courseDetail/app.css" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
   </head>
-  <body style="background-color: #202020; color: #c8c3bd">
-    <div>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-12 col-md-8 col-lg-8 mt-4">
-            <div>
-              <iframe
-                width="100%"
-                height="650px"
-                src="https://www.youtube.com/embed/3C1LW6qa080"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              >
-              </iframe>
+  <body style="color: #c8c3bd">
+    <div class="corses-detail">
+      <div class="container">
+        <div class="row" style="padding: 25px 0px 20px 0px">
+          <div class="col-md-9 col-xs-12">
+            <div
+              class="col-md-12 col-xs-12"
+              style="color: #fe4e11; padding-bottom: 20px"
+            >
+              <span>Khoá học </span>
+              <i class="fas fa-chevron-right"></i>
+              <span> NodeJs </span>
             </div>
-            <div class="title-lesson">
-              <span class="title-lesson-active"> Nội Dung bài học </span>
-            </div>
-            <div class="content-course">
+            <!--  title -->
+            <div class="col-md-12 col-xs-12" style="padding-bottom: 20px">
+              <h2>Xây dựng web với NodeJS & ExpressJS</h2>
               <p>
-                Tham gia nhóm Học softt để cùng nhau trao đổi trong quá trình
-                học tập ❤️
+                Xây dựng web trong thực tế với NodeJS & ExpressJS với cách chia
+                sẻ chi tiết, tận tâm, dễ hiểu và chất giọng giàu sức sống của
+                người chia sẻ
               </p>
+              <h3 style="padding-bottom: 20px">Bạn sẽ học được gì</h3>
+              <div class="row" style="padding-bottom: 20px">
+                <div class="col-md-6 col-xs-12">
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span
+                      >Nắm chắc lý thuyết chung trong việc xây dựng web</span
+                    >
+                  </div>
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span>Xây dựng web với Express bằng kiến thức thực tế</span>
+                  </div>
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span>Nắm chắc lý thuyết về API và RESTful API</span>
+                  </div>
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span>Nắm chắc khái niệm về giao thức HTTP</span>
+                  </div>
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span>Học được cách tổ chức code trong thực tế</span>
+                  </div>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span
+                      >Biết cách làm việc với Mongoose, MongoDB trong
+                      NodeJS</span
+                    >
+                  </div>
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span>Biết cách xây dựng API theo chuẩn RESTful API</span>
+                  </div>
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span>Được chia sẻ lại kinh nghiệm làm việc thực tế</span>
+                  </div>
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span
+                      >Hiểu rõ tư tưởng và cách hoạt động của mô hình MVC</span
+                    >
+                  </div>
+                  <div class="des-icon-check">
+                    <i class="fas fa-check icon-check"></i>
+                    <span
+                      >Biết cách deploy (triển khai) website lên internet</span
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-8 col-xs-12">
+                  <h3>Nội dung khoá học</h3>
+                </div>
+                <div class="col-md-4 col-xs-12">
+                  <p style="padding-top: 5px">
+                    36 Bài học
+                    <span> 12:07:52 </span>
+                  </p>
+                </div>
+              </div>
+
+              <div class="row name-course-post">
+                <a href="#">
+                  <div class="col-md-12 col-xs-12">
+                    <div>
+                      <i class="fas fa-play-circle icon-play-post"></i>
+                      <span> 1 . </span>
+                      <span> Lời khuyên giúp học lập trình hiệu quả hơn</span>
+
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        06:27
+                      </span>
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        Học thử</span
+                      >
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="row name-course-post">
+                <a href="#">
+                  <div class="col-md-12 col-xs-12">
+                    <div>
+                      <i class="fas fa-play-circle icon-play-post"></i>
+                      <span> 1 . </span>
+                      <span> Lời khuyên giúp học lập trình hiệu quả hơn</span>
+
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        06:27
+                      </span>
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        Học thử</span
+                      >
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="row name-course-post">
+                <a href="#">
+                  <div class="col-md-12 col-xs-12">
+                    <div>
+                      <i class="fas fa-play-circle icon-play-post"></i>
+                      <span> 1 . </span>
+                      <span> Lời khuyên giúp học lập trình hiệu quả hơn</span>
+
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        06:27
+                      </span>
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        Học thử</span
+                      >
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="row name-course-post">
+                <a href="#">
+                  <div class="col-md-12 col-xs-12">
+                    <div>
+                      <i class="fas fa-play-circle icon-play-post"></i>
+                      <span> 1 . </span>
+                      <span> Lời khuyên giúp học lập trình hiệu quả hơn</span>
+
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        06:27
+                      </span>
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        Học thử</span
+                      >
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="row name-course-post">
+                <a href="#">
+                  <div class="col-md-12 col-xs-12">
+                    <div>
+                      <i class="fas fa-play-circle icon-play-post"></i>
+                      <span> 1 . </span>
+                      <span> Lời khuyên giúp học lập trình hiệu quả hơn</span>
+
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        06:27
+                      </span>
+                      <span style="float: right; padding: 0px 20px 0px 20px">
+                        Học thử</span
+                      >
+                    </div>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-4 col-lg-4">
-            <div class="list-group-flush hr-list mt-4">
-              <h2 class="list-group-item bg-list title-list">Title course</h2>
-            </div>
-            <div class="list-group-flush hr-list">
-              <a href="#" class="list-group-item bg-list">
-                <p class="mb-0">Photos</p>
-              </a>
-            </div>
-            <div class="list-group-flush hr-list">
-              <a href="#" class="list-group-item bg-list">
-                <p class="mb-0">Photos</p>
-              </a>
-            </div>
-            <div class="list-group-flush hr-list">
-              <a href="#" class="list-group-item bg-list">
-                <p class="mb-0">Photos</p>
-              </a>
+          <div class="col-md-3 col-xs-12">
+            <div>
+              <div class="right-courses-detail">
+                <div>
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    style="
+                      padding: 6px 32px 6px 32px;
+                      border-radius: 15px;
+                      margin-bottom: 20px;
+                    "
+                  >
+                    Đăng ký học
+                  </button>
+                </div>
+                <div class="des-right-courses">
+                  <i class="fas fa-tachometer-alt icon-right-courses"></i>
+                  <span> Trình độ cơ bản</span>
+                </div>
+                <div class="des-right-courses">
+                  <i class="fas fa-film icon-right-courses"></i>
+                  <span> Tổng số 36 bài học</span>
+                </div>
+                <div class="des-right-courses">
+                  <i class="fas fa-clock icon-right-courses"></i>
+                  <span> Cần 12.12 giờ để học</span>
+                </div>
+                <div class="des-right-courses">
+                  <i
+                    class="fas fa-battery-three-quarters icon-right-courses"
+                  ></i>
+                  <span> Học mọi lúc mọi nơi</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
